# Memo-client-cli

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  run
scripts/: compile  setup
src/: CMakeLists.txt  Client.cpp  Client.hpp  main.cpp
src/context/: Resources.cpp  Resources.hpp
src/controller/: BaseController.hpp  HomeController.cpp  HomeController.hpp  IController.hpp  MemoCreateController.cpp  MemoCreateController.hpp  SearchController.cpp  SearchController.hpp
src/manager/: ControllerManager.cpp  ControllerManager.hpp  ViewManager.cpp  ViewManager.hpp
src/model/: CMakeLists.txt  Memo.cpp  Memo.hpp  ModelDefs.hpp  Tag.cpp  Tag.hpp
src/ncurses/: BaseWindow.cpp  BaseWindow.hpp  IWindow.hpp  SubWindow.cpp  SubWindow.hpp  Window.cpp  Window.hpp  functions.cpp  functions.hpp  keys.cpp  keys.hpp
src/remote/: AddMemoCall.cpp  AddMemoCall.hpp  AddMemoRequest.cpp  AddMemoRequest.hpp  AddMemoResponseData.cpp  AddMemoResponseData.hpp  AddTagCall.cpp  AddTagCall.hpp  AddTagRequest.cpp  AddTagRequest.hpp  AddTagResponseData.cpp  AddTagResponseData.hpp  BaseCall.hpp  Call.hpp  ListMemoCall.cpp  ListMemoCall.hpp  ListMemoRequest.cpp  ListMemoRequest.hpp  ListMemoResponseData.cpp  ListMemoResponseData.hpp  ListMemosCall.cpp  ListMemosCall.hpp  ListTagsCall.cpp  ListTagsCall.hpp  ListTagsRequest.cpp  ListTagsRequest.hpp  ListTagsResponseData.cpp  ListTagsResponseData.hpp  MemoCreateCall.cpp  MemoCreateCall.hpp  MemoDao.cpp  MemoDao.hpp  MemoService.cpp  MemoService.hpp  RemoteDefs.hpp  ServiceEnums.hpp  ServiceResponse.hpp  TagService.cpp  TagService.hpp
src/remote/factory/: MemoCallFactory.cpp  MemoCallFactory.hpp  TagCallFactory.cpp  TagCallFactory.hpp
src/remote/utils/: Mapping.cpp  Mapping.hpp  ModelUtils.cpp  ModelUtils.hpp
src/utils/: Enums.hpp  ModelMapper.cpp  ModelMapper.hpp  Structs.cpp  Structs.hpp
src/view/: BaseComponent.cpp  BaseComponent.hpp  BaseView.cpp  BaseView.hpp  ComponentParams.cpp  ComponentParams.hpp  IComponent.hpp  IView.cpp  IView.hpp  ListMemoView.cpp  ListMemoView.hpp  MemoCreateView.cpp  MemoCreateView.hpp  MemoSearchView.cpp  MemoSearchView.hpp  MenuView.cpp  MenuView.hpp  TagCreateView.cpp  TagCreateView.hpp  View.cpp  View.hpp
src/view/dialog/: ConfirmDialog.cpp  ConfirmDialog.hpp  MessageDialog.cpp  MessageDialog.hpp
src/view/home/: HomeView.cpp  HomeView.hpp  MenuItem.cpp  MenuItem.hpp  MenuView.cpp  MenuView.hpp
src/view/tools/: StringTools.cpp  StringTools.hpp  Tools.cpp  Tools.hpp  ViewFocusOperator.cpp  ViewFocusOperator.hpp
src/view/widget/: ButtonView.cpp  ButtonView.hpp  ListView.cpp  ListView.hpp  TagPickerView.cpp  TagPickerView.hpp  Text.cpp  Text.hpp  TextEditView.cpp  TextEditView.hpp  TextView.cpp  TextView.hpp
test/: CMakeLists.txt  main.cpp
test/remote/utils/: TestModelUtils.inl
test/view/tools/: TestStringTools.inl
